# googlemapstew

./: README.md  pyproject.toml  temp_test_browser_control.py  test_searchgmaps.py
.claude/: settings.local.json
.github/: dependabot.yml
examples/: wendys.html
googlemapstew_plugin/: browser_control.py  search.py
src/googlemapstew/: __init__.py  cli.py  scraper.py
tests/: test_scraper.py  test_search.py
